# multi-agent-pipeline

./: .gitignore  .npmignore  AGENTS.md  README.md  install.sh  package-lock.json  package.json  pipeline.yaml  pipeline.yaml.example  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.core.config.ts  vitest.tui.config.ts
workspace/: README.md  pyproject.toml
workspace/docs/: chemlake-resolver-routing.md  chemlake-resolver-routing.mmd  metabolomics-indexing.md  pubchem-orchestration.md
workspace/docs/chemlake-resolver-databases/: README.md
workspace/docs/sources/: blocked-source-downloads.md
workspace/scripts/: ensure_chemlake_orchestrator.sh  fetch_hmdb.sh  fetch_t3db.sh  generate_resolver_docs.py  install_chemlake_orchestrator_cron.sh  stage_restricted_source.py
workspace/slurm/: chemlake-orchestrator.cron  chemlake-orchestrator.sbatch  chemlake-worker-dispatch.sbatch  env.example.sh  pubchem-worker.sbatch
workspace/src/chem_evidence/: __init__.py  api.py  cli.py  metabolomics.py  orchestration.py  pubchem_ftp.py  resolver.py  routing_catalog.py  source_adapters.py  source_orchestration.py  sync_state.py
workspace/src/pubchem_sync/: __init__.py  cli.py  converter.py  downloader.py  extractor.py  (+1 more)
workspace/tests/: test_chemlake_cli_api.py  test_cli.py  test_converter.py  test_integration.py  test_manifest.py  test_metabolomics.py  test_orchestration.py  test_orchestrator_cron.py  test_pubchem_ftp.py  test_resolver.py  test_resolver_docs.py  test_sdf_parser.py  test_source_adapters.py  test_source_orchestration.py  test_sync_state.py  test_xml_parser.py
(+534 files in other folders)
